crates/conjure-cp/tests/ui/fail/test_missing_operand.rs
use conjure_cp::essence_expr;

fn main() {
    essence_expr!(2 + (3 /));
}