crates/conjure-cp/tests/ui/fail/test_missing_operand.stderr
error: Syntax error: Expected an integer here
       2 + (3 /)
                ^-- Error here
 --> tests/ui/fail/test_missing_operand.rs:4:5
  |
4 |     essence_expr!(2 + (3 /));
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `essence_expr` (in Nightly builds, run with -Z macro-backtrace for more info)
